split Bamboo Cluster Node type from Bitbucket

--- a/templates/quickstart-bitbucket-dc.template.yaml
+++ b/templates/quickstart-bitbucket-dc.template.yaml
@@ -88,6 +88,7 @@ Metadata:
           default: Bamboo Settings (Optional)
         Parameters:
             - BambooIncluded
+            - BambooClusterNodeInstanceType
             - BambooTomcatContextPath
             - BambooVersion
             - BambooLicenseKey
@@ -109,6 +110,8 @@ Metadata:
     ParameterLabels:
       BambooIncluded:
         default: Will Bamboo be included
+      BambooClusterNodeInstanceType:
+        default: Bamboo Node Instance Type
       BambooTomcatContextPath:
         default: Bamboo Context Path
       BambooVersion:
@@ -240,6 +243,103 @@ Parameters:
       - "true"
       - "false"
     ConstraintDescription: Must be 'true' or 'false'.
+    Type: String
+  BambooClusterNodeInstanceType:
+    Default: t3a.medium
+    AllowedValues:
+      - t3a.medium
+      - c4.large
+      - c4.xlarge
+      - c4.2xlarge
+      - c4.4xlarge
+      - c4.8xlarge
+      - c5.large
+      - c5.xlarge
+      - c5.2xlarge
+      - c5.4xlarge
+      - c5.9xlarge
+      - c5.18xlarge
+      - c5d.large
+      - c5d.xlarge
+      - c5d.2xlarge
+      - c5d.4xlarge
+      - c5d.9xlarge
+      - c5d.18xlarge
+      - d2.xlarge
+      - d2.2xlarge
+      - d2.4xlarge
+      - d2.8xlarge
+      - h1.2xlarge
+      - h1.4xlarge
+      - h1.8xlarge
+      - h1.16xlarge
+      - i3.large
+      - i3.xlarge
+      - i3.2xlarge
+      - i3.4xlarge
+      - i3.8xlarge
+      - i3.16xlarge
+      - i3.metal
+      - m4.large
+      - m4.xlarge
+      - m4.2xlarge
+      - m4.4xlarge
+      - m4.10xlarge
+      - m4.16xlarge
+      - m5.large
+      - m5.xlarge
+      - m5.2xlarge
+      - m5.4xlarge
+      - m5.12xlarge
+      - m5.24xlarge
+      - m5d.large
+      - m5d.xlarge
+      - m5d.2xlarge
+      - m5d.4xlarge
+      - m5d.12xlarge
+      - m5d.24xlarge
+      - r4.large
+      - r4.xlarge
+      - r4.2xlarge
+      - r4.4xlarge
+      - r4.8xlarge
+      - r4.16xlarge
+      - r5.large
+      - r5.xlarge
+      - r5.2xlarge
+      - r5.4xlarge
+      - r5.12xlarge
+      - r5.24xlarge
+      - r5d.large
+      - r5d.xlarge
+      - r5d.2xlarge
+      - r5d.4xlarge
+      - r5d.12xlarge
+      - r5d.24xlarge
+      - t2.medium
+      - t2.large
+      - t2.xlarge
+      - t2.2xlarge
+      - t3.medium
+      - t3.large
+      - t3.xlarge
+      - t3.2xlarge
+      - x1.16xlarge
+      - x1.32xlarge
+      - x1e.xlarge
+      - x1e.2xlarge
+      - x1e.4xlarge
+      - x1e.8xlarge
+      - x1e.16xlarge
+      - x1e.32xlarge
+      - z1d.large
+      - z1d.xlarge
+      - z1d.2xlarge
+      - z1d.3xlarge
+      - z1d.6xlarge
+      - z1d.12xlarge
+    ConstraintDescription: Must be an EC2 instance type from the selection list
+    Description: 'Instance type for the cluster application nodes. See https://confluence.atlassian.com/x/GpdKLg for guidance.'
     Type: String
   BambooTomcatContextPath:
     Default: '/bamboo'
@@ -1146,10 +1246,10 @@ Resources:
           PropagateAtLaunch: true
         # NOTE: The leading COMMIT/TIMESTAMP are used to locate the position to update; see scripts/update-tags.py
         - Key: "atl:quickstart:commit-id"
-          Value: "COMMIT: 4a60a824dcf0db721266321b17a3b9ea85d6145c"
+          Value: "COMMIT: d6ebe59b5ccdd204a7edc72ab6f0f89d575ac6f8"
           PropagateAtLaunch: true
         - Key: "atl:quickstart:timestamp"
-          Value: "TIMESTAMP: 2023-02-01T07:16:23Z"
+          Value: "TIMESTAMP: 2023-02-09T03:14:41Z"
           PropagateAtLaunch: true
   ClusterNodeLaunchConfig:
     Type: AWS::AutoScaling::LaunchConfiguration
@@ -2485,10 +2585,10 @@ Resources:
           PropagateAtLaunch: true
         # NOTE: The leading COMMIT/TIMESTAMP are used to locate the position to update; see scripts/update-tags.py
         - Key: "atl:quickstart:commit-id"
-          Value: "COMMIT: 4a60a824dcf0db721266321b17a3b9ea85d6145c"
+          Value: "COMMIT: d6ebe59b5ccdd204a7edc72ab6f0f89d575ac6f8"
           PropagateAtLaunch: true
         - Key: "atl:quickstart:timestamp"
-          Value: "TIMESTAMP: 2023-02-01T07:16:23Z"
+          Value: "TIMESTAMP: 2023-02-09T03:14:41Z"
           PropagateAtLaunch: true
   BambooClusterNodeLaunchConfig:
     Condition: IsBambooIncluded
@@ -2634,7 +2734,7 @@ Resources:
         - AWSRegionArch2AMI
         - !Ref "AWS::Region"
         - HVM64
-      InstanceType: !Ref ClusterNodeInstanceType
+      InstanceType: !Ref BambooClusterNodeInstanceType
       SecurityGroups: [!Ref SecurityGroup]
       UserData:
         Fn::Base64:
